Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -3,18 +3,23 @@ body {
     display: flex;
     width: auto;
     flex-direction: column;
+    max-width: 100%;
+}
+
+html {
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 header {
     display: flex;
-    width: 100%;
+    max-width: 100%;
     
 }
 
 main {
     display: flex;
     flex-direction: column;
-    width: 100%;
 }
 
 .navbar {
@@ -22,14 +27,14 @@ main {
     display: flex;
     position: fixed;
     z-index: 1000;
+    max-width: 100%;
     width: 100%;
     justify-content: space-between;
-    padding-right: 24px;
-    padding-left: 24px;
     top: 0;
     left: 0;
     height: 64px;
     align-content: center;
+    padding-right: 24px;
 }
 
 li {
@@ -60,6 +65,7 @@ li {
     height: 32px;
     width: auto;
     align-self: center;
+    padding-left: 24px;
 }
 
 /* Banner Section */
